--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
             <section class="row">
                 <h2>Popular on Netflix Dog</h2>
                 <div class="movie-list">
-                    <a href="#" class="movie-item"><img src="https://cdn.cms-twdigitalassets.com/content/dam/about-twitter/x/brand-toolkit/logo-black.png.twimg.2560.png" alt="Dog Movie 1"></a>
-                    <a href="#" class="movie-item"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Telegram_2019_Logo.svg/182px-Telegram_2019_Logo.svg.png" alt="Dog Movie 2"></a>
+                    <a href="https://x.com/NetflixDogOnSol" class="movie-item"><img src="https://cdn.cms-twdigitalassets.com/content/dam/about-twitter/x/brand-toolkit/logo-black.png.twimg.2560.png" alt="Dog Movie 1"></a>
+                    <a href="https://t.me/NetflixDog" class="movie-item"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Telegram_2019_Logo.svg/182px-Telegram_2019_Logo.svg.png" alt="Dog Movie 2"></a>
                     <a href="#" class="movie-item"><img src="https://cdn.prod.website-files.com/6421d264d066fd2b24b91b20/661375b92a7e161501f4b5e5_dexscreener.322a5a2d.png" alt="Dog Movie 3"></a>
                     <a href="#" class="movie-item"><img src="https://pump.fun/icon.png?c2a22dd8671140c9" alt="Dog Movie 4"></a>
                 </div>
