--- a/index.html
+++ b/index.html
@@ -3,149 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Netflix Dog</title>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <title>Moana Lisa - Louvre Exhibit</title>
     <style>
-        body, html {
+        body {
             margin: 0;
             padding: 0;
-            height: 100%;
-            font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-            background-color: #141414;
-            color: #fff;
+            font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, serif;
+            background-color: #f0e6d2;
+            color: #333;
         }
-        .loading-page {
+        .header {
+            background-color: #8b0000;
+            color: #f0e6d2;
+            text-align: center;
+            padding: 20px 0;
+            font-size: 36px;
+            letter-spacing: 2px;
+        }
+        .exhibit {
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
-            background-color: #000;
+            height: calc(100vh - 80px);
         }
-        .loading-logo {
-            width: 200px;
-            height: 200px;
-            background-image: url('https://i.postimg.cc/KYtBczpp/Popcorn-dog-2.png');
-            background-size: contain;
-            background-repeat: no-repeat;
-            background-position: center;
-            animation: pulse 2s infinite;
+        .painting-frame {
+            background-color: #8b4513;
+            padding: 20px;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
         }
-        @keyframes pulse {
-            0% { transform: scale(1); }
-            50% { transform: scale(1.1); }
-            100% { transform: scale(1); }
+        .painting {
+            max-height: 70vh;
+            border: 10px solid #d4af37;
         }
-        .main-page {
-            display: none;
+        .plaque {
+            background-color: #d4af37;
+            color: #333;
+            padding: 10px 20px;
+            margin-top: 20px;
+            text-align: center;
+            font-style: italic;
         }
-        .header {
-            background-color: #000;
-            padding: 20px 40px;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-        }
-        .logo-nav {
-            display: flex;
-            align-items: center;
-        }
-        .logo {
-            width: 100px;
-            margin-right: 20px;
-        }
-        .nav-item {
-            color: #e5e5e5;
-            text-decoration: none;
-            margin-right: 20px;
-            font-size: 14px;
-        }
-        .netflix-header {
-            font-family: 'Bebas Neue', cursive;
-            font-size: 48px;
-            color: #e50914;
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
-        }
-        .main-content {
-            padding: 40px;
-        }
-        .row {
-            margin-bottom: 40px;
-        }
-        h2 {
-            font-size: 24px;
-            font-weight: 500;
-            margin-bottom: 20px;
-        }
-        .movie-list {
-            display: flex;
-            gap: 20px;
-            overflow-x: auto;
-            padding-bottom: 20px;
-        }
-        .movie-item {
-            width: 200px;
-            height: 300px;
-            background-color: #2f2f2f;
-            border-radius: 4px;
-            transition: transform 0.3s;
-            position: relative;
-            overflow: hidden;
-        }
-        .movie-item:hover {
-            transform: scale(1.05);
-            z-index: 1;
-        }
-        .movie-item img {
-            max-width: 100%;
-            max-height: 100%;
-            width: auto;
-            height: auto;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            object-fit: contain;
-        }
-        .movie-item:first-child img {
-            left: 52%; /* Move the first image slightly to the right */
+        .artist {
+            font-weight: bold;
         }
     </style>
 </head>
 <body>
-    <div class="loading-page">
-        <div class="loading-logo"></div>
-    </div>
-    <div class="main-page">
-        <header class="header">
-            <div class="logo-nav">
-                <img src="https://i.postimg.cc/KYtBczpp/Popcorn-dog-2.png" alt="Netflix Dog Logo" class="logo">
-                <nav>
-                    <a href="#" class="nav-item">Home</a>
-                    <a href="#" class="nav-item">TV Shows</a>
-                    <a href="#" class="nav-item">Movies</a>
-                    <a href="#" class="nav-item">New & Popular</a>
-                    <a href="#" class="nav-item">My List</a>
-                </nav>
+    <header class="header">
+        The Louvre Presents
+    </header>
+    <main class="exhibit">
+        <div class="painting-frame">
+            <img src="https://i.postimg.cc/zvjnJJ5h/Moanalisa-safe.png" alt="Moana Lisa" class="painting">
+            <div class="plaque">
+                <h2>Moana Lisa</h2>
+                <p>Oil on canvas, c. 2024</p>
+                <p class="artist">Artist: Leonardo Da Freaky</p>
             </div>
-            <h1 class="netflix-header">Netflix Dog</h1>
-        </header>
-        <main class="main-content">
-            <section class="row">
-                <h2>Popular on Netflix Dog</h2>
-                <div class="movie-list">
-                    <a href="https://x.com/NetflixDogOnSol" class="movie-item"><img src="https://cdn.cms-twdigitalassets.com/content/dam/about-twitter/x/brand-toolkit/logo-black.png.twimg.2560.png" alt="Dog Movie 1"></a>
-                    <a href="https://t.me/NetflixDog" class="movie-item"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Telegram_2019_Logo.svg/182px-Telegram_2019_Logo.svg.png" alt="Dog Movie 2"></a>
-                    <a href="https://x.com/NetflixDogOnSol" class="movie-item"><img src="https://cdn.prod.website-files.com/6421d264d066fd2b24b91b20/661375b92a7e161501f4b5e5_dexscreener.322a5a2d.png" alt="Dog Movie 3"></a>
-                    <a href="https://t.me/NetflixDog" class="movie-item"><img src="https://pump.fun/icon.png?c2a22dd8671140c9" alt="Dog Movie 4"></a>
-                </div>
-            </section>
-        </main>
-    </div>
-    <script>
-        setTimeout(() => {
-            document.querySelector('.loading-page').style.display = 'none';
-            document.querySelector('.main-page').style.display = 'block';
-        }, 3000); // 3000 milliseconds = 3 seconds
-    </script>
+        </div>
+    </main>
 </body>
 </html>
