--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
         <img id="bouncing-image" src="https://i.ibb.co/L6jqX6m/Sorrana.png" alt="Sorrana">
 
         <div class="button-container">
-            <a href="https://twitter.com" class="button" target="_blank">
+            <a href="https://x.com/SoranaOnSolana" class="button" target="_blank">
                 <img src="https://cdn.cms-twdigitalassets.com/content/dam/about-twitter/x/brand-toolkit/logo-black.png.twimg.2560.png" alt="X (Twitter)">
             </a>
-            <a href="https://telegram.org" class="button" target="_blank">
+            <a href="https://t.me/SoranaOnSolana" class="button" target="_blank">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Telegram_2019_Logo.svg/182px-Telegram_2019_Logo.svg.png" alt="Telegram">
             </a>
             <a href="https://dexscreener.com" class="button" target="_blank">
