--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             text-transform: uppercase;
         }
         .hero {
-            background-image: url('https://static.wikia.nocookie.net/callofduty/images/d/d8/A_K9_Unit_in_the_map_Slums.jpg/revision/latest/scale-to-width-down/1781?cb=20220603140851');
+            background-image: url('https://i.postimg.cc/mgjfW37g/2xavjaao0js41-ezgif-com-webp-to-jpg-converter.jpg');
             background-size: cover;
             background-position: center;
             height: 400px;
