--- a/index.html
+++ b/index.html
@@ -3,139 +3,148 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Phantom Dogg Wallet</title>
+    <title>Chrome Dog</title>
     <style>
         body, html {
             margin: 0;
             padding: 0;
-            font-family: 'Inter', sans-serif;
-            background-color: #1e1e1e;
-            color: #ffffff;
+            font-family: 'Segoe UI', 'Helvetica', 'Arial', sans-serif;
+            background-color: #f1f3f4;
+            color: #202124;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            min-height: 100vh;
         }
         .container {
             max-width: 1200px;
-            margin: 0 auto;
+            width: 100%;
             padding: 20px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
         header {
             display: flex;
-            justify-content: space-between;
+            flex-direction: column;
             align-items: center;
             margin-bottom: 40px;
         }
         .logo {
-            width: 150px;
-        }
-        nav a {
-            color: #ffffff;
-            text-decoration: none;
-            margin-left: 20px;
-            font-weight: 500;
-        }
-        .hero {
-            text-align: center;
-            margin-bottom: 60px;
-        }
-        h1 {
-            font-size: 3em;
+            width: 200px;
+            height: 200px;
             margin-bottom: 20px;
         }
-        .cta-button {
-            background-color: #512da8;
-            color: #ffffff;
-            padding: 12px 24px;
-            border-radius: 25px;
-            text-decoration: none;
-            font-weight: bold;
-            display: inline-block;
-            margin-top: 20px;
+        h1 {
+            font-size: 24px;
+            font-weight: normal;
+            margin: 0;
         }
-        .features {
+        .search-bar {
+            background-color: #ffffff;
+            border-radius: 24px;
+            padding: 12px 20px;
+            display: flex;
+            align-items: center;
+            box-shadow: 0 1px 6px 0 rgba(32,33,36,0.28);
+            margin-bottom: 40px;
+            width: 80%;
+            max-width: 600px;
+        }
+        .search-bar input {
+            border: none;
+            outline: none;
+            font-size: 16px;
+            width: 100%;
+            margin-left: 10px;
+        }
+        .apps-grid {
             display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            gap: 30px;
+            grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+            gap: 20px;
+            justify-content: center;
+            width: 100%;
+            max-width: 600px;
         }
-        .feature {
-            background-color: #2a2a2a;
-            padding: 20px;
-            border-radius: 10px;
+        .app {
             text-align: center;
+            cursor: pointer;
         }
-        .feature a {
-            color: #ffffff;
-            text-decoration: none;
-            display: block;
-        }
-        .feature img {
+        .app-icon {
             width: 60px;
             height: 60px;
-            margin-bottom: 15px;
-            object-fit: contain;
-        }
-        .social-links {
+            border-radius: 50%;
+            background-color: #ffffff;
             display: flex;
             justify-content: center;
-            gap: 20px;
-            margin-top: 40px;
+            align-items: center;
+            margin: 0 auto 10px;
+            box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+            overflow: hidden;
         }
-        .social-links a {
-            display: inline-block;
-            width: 40px;
-            height: 40px;
-        }
-        .social-links img {
-            width: 100%;
-            height: 100%;
+        .app-icon img {
+            width: 32px;
+            height: 32px;
             object-fit: contain;
+        }
+        .app-name {
+            font-size: 14px;
+            color: #5f6368;
+        }
+        .app a {
+            text-decoration: none;
+            color: inherit;
         }
     </style>
 </head>
 <body>
     <div class="container">
         <header>
-            <img src="https://i.postimg.cc/vTQ0jjYZ/Phantom-dogg.png" alt="Phantom Dogg Logo" class="logo">
-            <nav>
-                <a href="#features">Features</a>
-                <a href="#download">Download</a>
-                <a href="#support">Support</a>
-            </nav>
+            <img src="https://i.postimg.cc/15CWB9q4/Chrome-dog-1.png" alt="Chrome Dog Logo" class="logo">
+            <h1>Chrome Dog</h1>
         </header>
         
-        <section class="hero">
-            <h1>The Phantom Dogg Wallet</h1>
-            <p>A fast, secure, and user-friendly crypto wallet for the modern age.</p>
-            <a href="#download" class="cta-button">Get Started</a>
-        </section>
+        <div class="search-bar">
+            <svg focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
+                <path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z" fill="#5f6368"></path>
+            </svg>
+            <input type="text" placeholder="Search the web">
+        </div>
         
-        <section class="features" id="features">
-            <div class="feature">
-                <a href="https://x.com/PhantomDogOnSol" target="_blank">
-                    <img src="https://cdn.cms-twdigitalassets.com/content/dam/about-twitter/x/brand-toolkit/logo-black.png.twimg.2560.png" alt="X (Twitter)">
-                    <h3>X (Twitter)</h3>
-                    <p>Stay updated with the latest news and community discussions.</p>
+        <div class="apps-grid">
+            <div class="app">
+                <a href="https://twitter.com" target="_blank">
+                    <div class="app-icon">
+                        <img src="https://cdn.cms-twdigitalassets.com/content/dam/about-twitter/x/brand-toolkit/logo-black.png.twimg.2560.png" alt="X (Twitter)">
+                    </div>
+                    <div class="app-name">X (Twitter)</div>
                 </a>
             </div>
-            <div class="feature">
-                <a href="https://t.me/PhantomDogOnSol" target="_blank">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Telegram_2019_Logo.svg/182px-Telegram_2019_Logo.svg.png" alt="Telegram">
-                    <h3>Telegram</h3>
-                    <p>Join our Telegram group for instant support and updates.</p>
+            <div class="app">
+                <a href="https://telegram.org" target="_blank">
+                    <div class="app-icon">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Telegram_2019_Logo.svg/182px-Telegram_2019_Logo.svg.png" alt="Telegram">
+                    </div>
+                    <div class="app-name">Telegram</div>
                 </a>
             </div>
-            <div class="feature">
+            <div class="app">
                 <a href="https://dexscreener.com" target="_blank">
-                    <img src="https://cdn.prod.website-files.com/6421d264d066fd2b24b91b20/661375b92a7e161501f4b5e5_dexscreener.322a5a2d.png" alt="DexScreener">
-                    <h3>DexScreener</h3>
-                    <p>Its about to be here.</p>
+                    <div class="app-icon">
+                        <img src="https://cdn.prod.website-files.com/6421d264d066fd2b24b91b20/661375b92a7e161501f4b5e5_dexscreener.322a5a2d.png" alt="DexScreener">
+                    </div>
+                    <div class="app-name">DexScreener</div>
                 </a>
             </div>
-            <div class="feature">
+            <div class="app">
                 <a href="https://pump.fun" target="_blank">
-                    <img src="https://pump.fun/icon.png?c2a22dd8671140c9" alt="Pump.fun">
-                    <h3>Pump.fun</h3>
-                    <p>Look at the chart mooning.</p>
+                    <div class="app-icon">
+                        <img src="https://pump.fun/icon.png?c2a22dd8671140c9" alt="Pump.fun">
+                    </div>
+                    <div class="app-name">Pump.fun</div>
                 </a>
             </div>
-        </section>
-
-
+        </div>
+    </div>
+</body>
+</html>
