--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         
         <div class="apps-grid">
             <div class="app">
-                <a href="https://twitter.com" target="_blank">
+                <a href="https://x.com/ChromeDogOnSol" target="_blank">
                     <div class="app-icon">
                         <img src="https://cdn.cms-twdigitalassets.com/content/dam/about-twitter/x/brand-toolkit/logo-black.png.twimg.2560.png" alt="X (Twitter)">
                     </div>
@@ -121,7 +121,7 @@
                 </a>
             </div>
             <div class="app">
-                <a href="https://telegram.org" target="_blank">
+                <a href="https://t.me/ChromeDogOnSol" target="_blank">
                     <div class="app-icon">
                         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Telegram_2019_Logo.svg/182px-Telegram_2019_Logo.svg.png" alt="Telegram">
                     </div>
