--- a/index.html
+++ b/index.html
@@ -168,10 +168,10 @@
         <!-- Add more comic panels as needed -->
     </div>
     <div id="contact" class="footer">
-        <a href="https://t.me/yourtelegram" target="_blank">
+        <a href="https://t.me/MonkeyDLuffySol" target="_blank">
             <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram">
         </a>
-        <a href="https://twitter.com/yourtwitter" target="_blank">
+        <a href="https://x.com/SolMonkeyDLuffy" target="_blank">
             <img src="https://i.postimg.cc/RZrDf5Hh/X-Logo.png" alt="X" class="x-logo">
         </a>
         <a href="https://dex.com/yourdex" target="_blank">
