--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cyberdog 2077 - The Future of Crypto</title>
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <title>Purarri - The Ultimate Cat Ferrari</title>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
         :root {
-            --color-primary: #00ffff; /* Cyan */
-            --color-secondary: #ff00ff; /* Magenta */
-            --color-accent: #ffff00; /* Yellow */
-            --color-background: #0a0a0a; /* Dark background */
-            --color-text: #ffffff; /* White text */
+            --color-primary: #ff2800; /* Ferrari Red */
+            --color-secondary: #ffffff; /* White */
+            --color-accent: #000000; /* Black */
+            --color-background: #f5f5f5; /* Light Grey */
+            --color-gold: #d4af37; /* Gold */
         }
 
         body, html {
@@ -19,138 +19,93 @@
             padding: 0;
             font-family: 'Roboto', sans-serif;
             background-color: var(--color-background);
-            color: var(--color-text);
+            color: var(--color-accent);
             overflow-x: hidden;
         }
 
         header {
-            background-color: rgba(0, 0, 0, 0.8);
-            color: var(--color-primary);
+            background-color: var(--color-primary);
+            color: var(--color-secondary);
             padding: 20px 0;
             text-align: center;
             font-size: 24px;
             font-weight: bold;
-            font-family: 'Orbitron', sans-serif;
+            font-family: 'Playfair Display', serif;
             letter-spacing: 2px;
-            text-transform: uppercase;
-            position: relative;
-            overflow: hidden;
-        }
-
-        header::after {
-            content: '';
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            height: 2px;
-            background-color: var(--color-primary);
-            box-shadow: 
-                0 0 5px var(--color-primary),
-                0 0 10px var(--color-primary),
-                0 0 15px var(--color-primary),
-                0 0 20px var(--color-primary);
-            animation: glow 1.5s ease-in-out infinite alternate;
         }
 
         nav {
             display: flex;
             justify-content: center;
-            background-color: rgba(0, 0, 0, 0.6);
+            background-color: var(--color-accent);
             padding: 10px 0;
         }
 
         nav a {
-            color: var(--color-text);
+            color: var(--color-secondary);
             text-decoration: none;
             margin: 0 20px;
             font-weight: bold;
             transition: color 0.3s;
-            font-family: 'Orbitron', sans-serif;
-            text-transform: uppercase;
+            font-family: 'Playfair Display', serif;
         }
 
         nav a:hover {
-            color: var(--color-secondary);
+            color: var(--color-gold);
         }
 
         .hero {
-            background-image: url('https://wallpapers.com/images/high/cyberpunk-night-city-eb5z7c9pbcpo3g9d.webp');
-            background-size: cover;
-            background-position: center;
-            height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+            background-color: var(--color-primary);
+            color: var(--color-secondary);
             text-align: center;
+            padding: 100px 20px;
             position: relative;
-        }
-
-        .hero::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: rgba(0, 0, 0, 0.5);
-        }
-
-        .hero-content {
-            position: relative;
-            z-index: 1;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
         }
 
         .hero img {
-            width: 300px;
+            width: 60%;
+            max-width: 600px;
             height: auto;
-            margin-bottom: 30px;
-            filter: drop-shadow(0 0 10px var(--color-primary));
+            border: 5px solid var(--color-secondary);
+            border-radius: 10px;
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+            transition: transform 0.3s ease;
+        }
+
+        .hero img:hover {
+            transform: scale(1.05);
         }
 
         .hero h1 {
             font-size: 64px;
             margin: 20px 0;
-            font-family: 'Orbitron', sans-serif;
+            font-family: 'Playfair Display', serif;
             letter-spacing: 3px;
-            color: var(--color-primary);
-            text-shadow: 
-                0 0 5px var(--color-primary),
-                0 0 10px var(--color-primary),
-                0 0 15px var(--color-primary),
-                0 0 20px var(--color-primary);
-            animation: textGlow 1.5s ease-in-out infinite alternate;
         }
 
         .hero p {
             font-size: 24px;
             margin: 20px 0;
-            font-family: 'Orbitron', sans-serif;
-            color: var(--color-accent);
+            font-family: 'Playfair Display', serif;
         }
 
         .cta-button {
-            background-color: var(--color-secondary);
-            color: var(--color-text);
+            background-color: var(--color-gold);
+            color: var(--color-primary);
             padding: 15px 30px;
-            border: none;
+            border-radius: 30px;
             text-decoration: none;
             font-weight: bold;
             display: inline-block;
             margin-top: 20px;
             transition: all 0.3s ease;
             font-size: 18px;
-            font-family: 'Orbitron', sans-serif;
-            text-transform: uppercase;
-            clip-path: polygon(10% 0%, 90% 0%, 100% 50%, 90% 100%, 10% 100%, 0% 50%);
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
 
         .cta-button:hover {
-            background-color: var(--color-primary);
-            color: var(--color-background);
+            background-color: var(--color-accent);
+            color: var(--color-secondary);
             transform: scale(1.05);
         }
 
@@ -162,42 +117,22 @@
         .content h2 {
             font-size: 48px;
             margin-bottom: 20px;
-            font-family: 'Orbitron', sans-serif;
-            color: var(--color-secondary);
-            text-transform: uppercase;
+            font-family: 'Playfair Display', serif;
+            color: var(--color-primary);
         }
 
         .content p {
             font-size: 20px;
             margin-bottom: 20px;
-            font-family: 'Roboto', sans-serif;
-            color: var(--color-text);
+            font-family: 'Playfair Display', serif;
         }
 
         footer {
-            background-color: rgba(0, 0, 0, 0.8);
-            color: var(--color-text);
+            background-color: var(--color-accent);
+            color: var(--color-secondary);
             text-align: center;
             padding: 20px 0;
             margin-top: 40px;
-            position: relative;
-            overflow: hidden;
-        }
-
-        footer::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            height: 2px;
-            background-color: var(--color-secondary);
-            box-shadow: 
-                0 0 5px var(--color-secondary),
-                0 0 10px var(--color-secondary),
-                0 0 15px var(--color-secondary),
-                0 0 20px var(--color-secondary);
-            animation: glow 1.5s ease-in-out infinite alternate;
         }
 
         .social-icons {
@@ -220,39 +155,21 @@
             width: 30px;
             height: 30px;
             object-fit: contain;
-            filter: invert(1) hue-rotate(180deg);
         }
 
-        @keyframes glow {
-            from {
-                opacity: 0.5;
-            }
-            to {
-                opacity: 1;
-            }
+        .social-icons .invert {
+            filter: invert(1);
         }
 
-        @keyframes textGlow {
-            from {
-                text-shadow: 
-                    0 0 5px var(--color-primary),
-                    0 0 10px var(--color-primary),
-                    0 0 15px var(--color-primary),
-                    0 0 20px var(--color-primary);
-            }
-            to {
-                text-shadow: 
-                    0 0 10px var(--color-primary),
-                    0 0 20px var(--color-primary),
-                    0 0 30px var(--color-primary),
-                    0 0 40px var(--color-primary);
-            }
+        .social-icons .small {
+            width: 25px; /* Slightly smaller size for the X logo */
+            height: 25px;
         }
     </style>
 </head>
 <body>
     <header>
-        Cyberdog 2077 - The Future of Crypto
+        Purarri - The Ultimate Cat Ferrari
     </header>
 
     <nav>
@@ -263,35 +180,33 @@
     </nav>
 
     <div class="hero" id="home">
-        <div class="hero-content">
-            <img src="https://i.postimg.cc/4yS76DMH/cyber-dog.png" alt="Cyberdog 2077 Logo">
-            <h1>Cyberdog 2077</h1>
-            <p>The Future of Crypto is Here</p>
-            <a href="#features" class="cta-button">Explore</a>
-        </div>
+        <img src="https://i.postimg.cc/wB74wwKL/Catferrari.png" alt="Purarri Car">
+        <h1>Purarri</h1>
+        <p>Experience the Purr of Luxury and Speed</p>
+        <a href="#features" class="cta-button">Discover More</a>
     </div>
 
     <div class="content" id="about">
-        <h2>About Cyberdog 2077</h2>
-        <p>Cyberdog 2077 is a revolutionary crypto project that combines cutting-edge blockchain technology with the aesthetics of a dystopian future. Our mission is to create a decentralized ecosystem that empowers users in the digital age.</p>
+        <h2>About Purarri</h2>
+        <p>Purarri is the ultimate blend of luxury, speed, and feline elegance. Designed for those who appreciate the finer things in life, Purarri offers an unparalleled driving experience.</p>
     </div>
 
     <div class="content" id="features">
         <h2>Features</h2>
-        <p>Experience the future of finance with Cyberdog 2077. Our platform offers lightning-fast transactions, unbreakable security, and a range of futuristic DeFi applications that will transform the way you interact with digital assets.</p>
+        <p>From its sleek design to its powerful engine, Purarri is packed with features that make it the perfect car for any cat enthusiast. Enjoy state-of-the-art technology, premium materials, and a driving experience like no other.</p>
     </div>
 
     <footer>
-        <p>&copy; 2077 Cyberdog. All rights reserved.</p>
+        <p>&copy; 2024 Purarri. All rights reserved.</p>
         <div class="social-icons">
-            <a href="https://x.com/Cyberdog2077Sol" target="_blank" rel="noopener noreferrer">
-                <img src="https://cdn.cms-twdigitalassets.com/content/dam/about-twitter/x/brand-toolkit/logo-black.png.twimg.2560.png" alt="Twitter X Logo">
+            <a href="https://x.com/PurrariSolana" target="_blank" rel="noopener noreferrer">
+                <img src="https://cdn.cms-twdigitalassets.com/content/dam/about-twitter/x/brand-toolkit/logo-black.png.twimg.2560.png" alt="Twitter X Logo" class="invert small">
             </a>
-            <a href="https://t.me/Cyberdog2077" target="_blank" rel="noopener noreferrer">
+            <a href="https://t.me/PurrariSolana" target="_blank" rel="noopener noreferrer">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Telegram_2019_Logo.svg/182px-Telegram_2019_Logo.svg.png" alt="Telegram Logo">
             </a>
             <a href="https://dexscreener.com" target="_blank" rel="noopener noreferrer">
-                <img src="https://cdn.prod.website-files.com/6421d264d066fd2b24b91b20/661375b92a7e161501f4b5e5_dexscreener.322a5a2d.png" alt="DexScreener Logo">
+                <img src="https://cdn.prod.website-files.com/6421d264d066fd2b24b91b20/661375b92a7e161501f4b5e5_dexscreener.322a5a2d.png" alt="DexScreener Logo" class="invert">
             </a>
             <a href="https://pump.fun" target="_blank" rel="noopener noreferrer">
                 <img src="https://pump.fun/icon.png?c2a22dd8671140c9" alt="Pump Fun Logo">
