--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Purarri - The Ultimate Cat Ferrari</title>
+    <title>Purrari - The Ultimate Cat Ferrari</title>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
         :root {
@@ -169,7 +169,7 @@
 </head>
 <body>
     <header>
-        Purarri - The Ultimate Cat Ferrari
+        Purrari - The Ultimate Cat Ferrari
     </header>
 
     <nav>
@@ -180,24 +180,24 @@
     </nav>
 
     <div class="hero" id="home">
-        <img src="https://i.postimg.cc/wB74wwKL/Catferrari.png" alt="Purarri Car">
-        <h1>Purarri</h1>
+        <img src="https://i.postimg.cc/wB74wwKL/Catferrari.png" alt="Purrari Car">
+        <h1>Purrarri</h1>
         <p>Experience the Purr of Luxury and Speed</p>
         <a href="#features" class="cta-button">Discover More</a>
     </div>
 
     <div class="content" id="about">
-        <h2>About Purarri</h2>
-        <p>Purarri is the ultimate blend of luxury, speed, and feline elegance. Designed for those who appreciate the finer things in life, Purarri offers an unparalleled driving experience.</p>
+        <h2>About Purrari</h2>
+        <p>Purrari is the ultimate blend of luxury, speed, and feline elegance. Designed for those who appreciate the finer things in life, Purrari offers an unparalleled driving experience.</p>
     </div>
 
     <div class="content" id="features">
         <h2>Features</h2>
-        <p>From its sleek design to its powerful engine, Purarri is packed with features that make it the perfect car for any cat enthusiast. Enjoy state-of-the-art technology, premium materials, and a driving experience like no other.</p>
+        <p>From its sleek design to its powerful engine, Purrari is packed with features that make it the perfect car for any cat enthusiast. Enjoy state-of-the-art technology, premium materials, and a driving experience like no other.</p>
     </div>
 
     <footer>
-        <p>&copy; 2024 Purarri. All rights reserved.</p>
+        <p>&copy; 2024 Purrari. All rights reserved.</p>
         <div class="social-icons">
             <a href="https://x.com/PurrariSolana" target="_blank" rel="noopener noreferrer">
                 <img src="https://cdn.cms-twdigitalassets.com/content/dam/about-twitter/x/brand-toolkit/logo-black.png.twimg.2560.png" alt="Twitter X Logo" class="invert small">
